- Валидация загрузки: - Проверка $_FILES['file']['error'] , is_uploaded_file , лимит размера до 2 МБ. - Проверка MIME через getimagesize : допускаются image/jpeg , image/png , image/gif . - Сохранение файла: - Используется move_uploaded_file(...) вместо copy(...) . - Перед сохранением удаляются старые аватары пользователя ( /files/ava/<id>* ). - Ресайз и качество: - Единый порог ресайза: при ширине или высоте больше 256 — сжатие с сохранением пропорций. - JPEG сохраняется с качеством 90. - PNG/GIF обрабатываются через imagecreatetruecolor ; включена поддержка альфа‑канала ( imagealphablending(false) и imagesavealpha(true) ), чтобы не терялась прозрачность. - Мелкие правки: - Для JPEG исправлено условие ресайза: теперь imagesx > 256 || imagesy > 256 . - Исправлены пути сохранения для всех форматов. - Сообщения об ошибках и успехе добавляются в $err и выводятся через apicms_error($err) .

--- a/.htaccess
+++ b/.htaccess
@@ -47,13 +47,16 @@ AddDefaultCharset UTF-8
 # php_value zlib.output_compression 4096
 # php_value zlib.output_compression_level 5
 
-# <FilesMatch ".(flv|gif|jpg|jpeg|png|ico|swf|js|css|pdf)$">
-# Header set Cache-Control "max-age=86400"
-# </FilesMatch>
+<FilesMatch "\.(?:flv|gif|jpg|jpeg|png|ico|swf|js|css|pdf)$">
+Header set Cache-Control "public, max-age=2592000"
+</FilesMatch>
 
-# FileETag MTime Size
-# ExpiresActive on
-# ExpiresDefault "access plus 86400 seconds"
+FileETag MTime Size
+ExpiresActive On
+ExpiresByType image/gif "access plus 30 days"
+ExpiresByType image/jpeg "access plus 30 days"
+ExpiresByType image/png "access plus 30 days"
+ExpiresByType image/x-icon "access plus 30 days"
 
 
 
