--- a/.htaccess
+++ b/.htaccess
@@ -68,3 +68,12 @@ ErrorDocument 404 /error/404.php
 ErrorDocument 406 /error/406.php
 ErrorDocument 500 /error/500.php
 ErrorDocument 502 /error/502.php
+
+# Pretty URLs for user profiles: /nickname → profile.php?username=nickname
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+# Exclude known top-level routes and directories
+RewriteCond %{REQUEST_URI} !^/(index|auth|login|lost_pass|reg|install|design|modules|admin|mini_chat|api_forum|api_lib|files|captcha|err|error|profile|block)(/|$)
+# Only single-segment ASCII nicknames
+RewriteRule ^([A-Za-z0-9._-]+)$ profile.php?username=$1 [L,QSA]
