--- a/.htaccess
+++ b/.htaccess
@@ -77,3 +77,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !^/(index|auth|login|lost_pass|reg|install|design|modules|admin|mini_chat|api_forum|api_lib|files|captcha|err|error|profile|block)(/|$)
 # Only single-segment ASCII nicknames
 RewriteRule ^([A-Za-z0-9._-]+)$ profile.php?username=$1 [L,QSA]
+<IfModule mod_headers.c>
+Header always set X-Frame-Options "DENY"
+Header always set X-Content-Type-Options "nosniff"
+Header always set Referrer-Policy "strict-origin-when-cross-origin"
+Header always set Content-Security-Policy "default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' https://ajax.googleapis.com"
+</IfModule>
